k8s/base/pods/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: http
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: mqtt-ingress
# spec:
#   entryPoints:
#   - mqtt
#   routes:
#   - match: HostSNI(`*`) # Can be specific like `example.kgamble.dev` if needed
#     services:
#     - name: mqtt-service
#       port: 1883
